<resources>
    <string name="app_name">Kinopoisk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Привет, </string>
    <string name="name">Валерия</string>
    <string name="search">Поиск</string>
    <string name="desc">Давай сегодня посмотрим...</string>
    <string name="categories">Категории</string>
    <string name="all">Все</string>
    <string name="defolt_categories">Романтика</string>
    <string name="recommendations">Рекомендации</string>
    <string name="new_films">Новинки</string>
    <string name="kinopoisk">Кинопоиск</string>
    <string name="_10_imdb">/10 IMDb</string>
    <string name="text_time">мин.</string>
    <string name="filter">Фильтры</string>
    <string name="films">Фильмы</string>
    <string name="series">Сериалы</string>
    <string name="genre">Жанры:</string>
    <string name="county">Страны:</string>
    <string name="imdb">Рейтинг по IMDb:</string>
    <string name="from">От:</string>
    <string name="to">До:</string>
</resources>